; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_generic.c_generic_rmdirat.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_generic.c_generic_rmdirat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }
%struct.mount = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.mount*, i8*)* }

@MAX_PATH = common dso_local global i32 0, align 4
@N_SYMLINK_FOLLOW = common dso_local global i32 0, align 4
@N_PARENT_DIR_WRITE = common dso_local global i32 0, align 4
@_EBUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @generic_rmdirat(%struct.fd* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fd*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.mount*, align 8
  store %struct.fd* %0, %struct.fd** %4, align 8
  store i8* %1, i8** %5, align 8
  %11 = load i32, i32* @MAX_PATH, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %6, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %7, align 8
  %15 = load %struct.fd*, %struct.fd** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* @N_SYMLINK_FOLLOW, align 4
  %18 = load i32, i32* @N_PARENT_DIR_WRITE, align 4
  %19 = or i32 %17, %18
  %20 = call i32 @path_normalize(%struct.fd* %15, i8* %16, i8* %14, i32 %19)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %2
  %24 = load i32, i32* %8, align 4
  store i32 %24, i32* %3, align 4
  store i32 1, i32* %9, align 4
  br label %42

25:                                               ; preds = %2
  %26 = call i64 @contains_mount_point(i8* %14)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %25
  %29 = load i32, i32* @_EBUSY, align 4
  store i32 %29, i32* %3, align 4
  store i32 1, i32* %9, align 4
  br label %42

30:                                               ; preds = %25
  %31 = call %struct.mount* @find_mount_and_trim_path(i8* %14)
  store %struct.mount* %31, %struct.mount** %10, align 8
  %32 = load %struct.mount*, %struct.mount** %10, align 8
  %33 = getelementptr inbounds %struct.mount, %struct.mount* %32, i32 0, i32 0
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i32 (%struct.mount*, i8*)*, i32 (%struct.mount*, i8*)** %35, align 8
  %37 = load %struct.mount*, %struct.mount** %10, align 8
  %38 = call i32 %36(%struct.mount* %37, i8* %14)
  store i32 %38, i32* %8, align 4
  %39 = load %struct.mount*, %struct.mount** %10, align 8
  %40 = call i32 @mount_release(%struct.mount* %39)
  %41 = load i32, i32* %8, align 4
  store i32 %41, i32* %3, align 4
  store i32 1, i32* %9, align 4
  br label %42

42:                                               ; preds = %30, %28, %23
  %43 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %43)
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @path_normalize(%struct.fd*, i8*, i8*, i32) #2

declare dso_local i64 @contains_mount_point(i8*) #2

declare dso_local %struct.mount* @find_mount_and_trim_path(i8*) #2

declare dso_local i32 @mount_release(%struct.mount*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
